# hft

./: .gitignore  CLAUDE.md  Cargo.toml  DEPLOYMENT.md  OKX_INTEGRATION_GUIDE.md  PERFORMANCE_IMPROVEMENTS.md  README.md  UBUNTU_SETUP.md  integration-config.example.toml  rust-toolchain.toml
.cargo/: config.toml
crates/benchmarks/: Cargo.toml
crates/benchmarks/src/: latency_bench.rs  order_book_bench.rs
crates/event-processor/: Cargo.toml
crates/event-processor/src/: batch.rs  channels.rs  events.rs  lib.rs  processor.rs
crates/integrations/: Cargo.toml
crates/integrations/src/: config.rs  coordinator.rs  lib.rs  types.rs
crates/integrations/src/mcp/: client.rs  features.rs  mod.rs  types.rs
crates/integrations/src/okx/: auth.rs  client.rs  mod.rs  types.rs  websocket.rs
crates/integrations/src/rag/: client.rs  ingestion.rs  mod.rs  types.rs
crates/latency-profiler/: Cargo.toml
crates/latency-profiler/src/: histogram.rs  lib.rs  metrics.rs  profiler.rs  rdtsc_timer.rs
crates/market-data/: Cargo.toml
crates/market-data/src/: feed.rs  lib.rs  snapshot.rs  stream.rs  types.rs
crates/order-book/: Cargo.toml
crates/order-book/src/: atomic_price_level.rs  lib.rs  lockfree_order_book.rs  memory_pools.rs  order_book.rs  price_level.rs  types.rs
crates/risk-manager/: Cargo.toml
crates/risk-manager/src/: lib.rs  limits.rs  manager.rs  position.rs  validation.rs
crates/trading-engine/: Cargo.toml
crates/trading-engine/src/: config.rs  engine.rs  lib.rs  portfolio.rs  state.rs
deployment/config/: production.toml
deployment/docker/: Dockerfile  docker-compose.yml
deployment/kubernetes/: deployment.yaml
deployment/monitoring/: prometheus.yml
deployment/monitoring/alerts/: hft-alerts.yml
deployment/monitoring/grafana/dashboards/: hft-dashboard.json
deployment/scripts/: deploy.sh
src/: config.rs  event_processor.rs  latency_profiler.rs  lib.rs  main.rs  market_data.rs  metrics.rs  order_book.rs  risk_manager.rs  trading_engine.rs  types.rs  utils.rs
src/numa/: allocator.rs  mod.rs  threading.rs  topology.rs
tests/: benchmark_comparison_tests.rs  fuzz_tests.proptest-regressions  fuzz_tests.rs  integration_tests.proptest-regressions  integration_tests.rs  memory_leak_tests.rs  performance_regression_tests.rs  thread_safety_tests.rs
