[package]
name = "integrations"
version = "0.1.0"
edition = "2021"
authors = ["HFT Trading Team"]
description = "External integrations for HFT trading system (OKX, MCP, RAG)"
license = "MIT"

[dependencies]
# Workspace crates
order-book = { path = "../order-book" }
market-data = { path = "../market-data" }
event-processor = { path = "../event-processor" }
trading-engine = { path = "../trading-engine" }
risk-manager = { path = "../risk-manager" }

# Async runtime
tokio = { version = "1.35", features = ["full", "rt-multi-thread", "macros"] }
tokio-util = { version = "0.7", features = ["codec", "time"] }

# HTTP client and WebSocket
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"] }
tokio-tungstenite = { version = "0.20", features = ["rustls-tls-native-roots"] }
url = "2.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Cryptography for OKX authentication
ring = "0.17"
hex = "0.4"
base64 = "0.21"
sha2 = "0.10"
hmac = "0.12"

# Time handling
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"

# Configuration
config = "0.14"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging and metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
metrics = "0.22"

# Concurrency and performance
crossbeam = "0.8"
crossbeam-channel = "0.5"
dashmap = "5.5"
parking_lot = "0.12"
arc-swap = "1.6"

# Utilities
uuid = { version = "1.6", features = ["v4", "fast-rng", "serde"] }
once_cell = "1.19"
bytes = "1.5"
futures = "0.3"

# Numeric types
rust_decimal = { version = "1.32", features = ["serde-float"] }
num-traits = "0.2"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11"
wiremock = "0.5"

[features]
default = []
okx = []
mcp = []
rag = []
all = ["okx", "mcp", "rag"]