[package]
name = "order-book"
version = "0.1.0"
edition = "2021"
authors = ["HFT Trading Team"]
description = "Lock-free order book implementation for HFT trading"

[dependencies]
serde = { workspace = true }
crossbeam = { workspace = true }
crossbeam-skiplist = "0.1"
dashmap = "5.5"
parking_lot = "0.12"
fixed = { version = "1.24", features = ["serde"] }
typenum = "1.17"
uuid = { version = "1.6", features = ["v4", "fast-rng", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = "1.0"
num-traits = "0.2"

[dev-dependencies]
serde_json = "1.0"
proptest = "1.4"
tokio-test = "0.4"