[package]
name = "risk-manager"
version = "0.1.0"
edition = "2021"
authors = ["HFT Trading Team"]
description = "Risk management and position limits for HFT trading"

[dependencies]
serde = { workspace = true }
fixed = "1.24"
parking_lot = "0.12"
dashmap = "5.5"
chrono = { version = "0.4", features = ["serde"] }
order-book = { path = "../order-book" }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = "1.0"